Update portfolio links with YouTube thumbnails

--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@
   <section id="work" class="py-24 container mx-auto px-6">
     <h2 class="text-3xl font-semibold mb-12">Work Samples</h2>
     <div class="grid md:grid-cols-3 gap-8">
-      <!-- Replace # with actual links and thumbnails -->
-      <a href="#" target="_blank" class="block group">
-        <img src="thumb1.jpg" alt="Project 1" class="rounded-2xl group-hover:opacity-80 transition" />
+      <a href="https://youtu.be/qwvi9Dtw8sg" target="_blank" class="block group">
+        <img src="https://img.youtube.com/vi/qwvi9Dtw8sg/hqdefault.jpg" alt="Time Quake I – Music Video thumbnail" class="rounded-2xl group-hover:opacity-80 transition" />
         <p class="mt-2 text-lg">Time Quake I – Music Video</p>
       </a>
-      <a href="#" target="_blank" class="block group">
-        <img src="thumb2.jpg" alt="Project 2" class="rounded-2xl group-hover:opacity-80 transition" />
+      <a href="https://youtu.be/9qKR6wpHsEc" target="_blank" class="block group">
+        <img src="https://img.youtube.com/vi/9qKR6wpHsEc/hqdefault.jpg" alt="Hellcraft – Lyric Video thumbnail" class="rounded-2xl group-hover:opacity-80 transition" />
         <p class="mt-2 text-lg">Hellcraft – Lyric Video</p>
       </a>
-      <a href="#" target="_blank" class="block group">
-        <img src="thumb3.jpg" alt="Project 3" class="rounded-2xl group-hover:opacity-80 transition" />
+      <a href="https://youtu.be/Nv7clLmkKfo" target="_blank" class="block group">
+        <img src="https://img.youtube.com/vi/Nv7clLmkKfo/hqdefault.jpg" alt="Crown of Thorns – Promo Cut thumbnail" class="rounded-2xl group-hover:opacity-80 transition" />
         <p class="mt-2 text-lg">Crown of Thorns – Promo Cut</p>
       </a>
     </div>
