Add site header and adjust hero section padding

--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
 </head>
 <body class="bg-zinc-950 text-zinc-100 font-sans leading-relaxed">
 
+  <header class="fixed top-0 inset-x-0 bg-zinc-900/80 backdrop-blur-sm z-50">
+    <div class="container mx-auto flex items-center justify-between p-4">
+      <a href="/" class="text-xl font-bold">Plumbmonkey</a>
+      <nav class="space-x-6">
+        <a href="#about" class="hover:underline">About</a>
+        <a href="#services" class="hover:underline">Services</a>
+        <a href="#work" class="hover:underline">Work</a>
+        <a href="#contact" class="hover:underline">Hire Me</a>
+        <a href="YOUR_DIRECTORY_URL" target="_blank" rel="noopener" class="hover:underline">Directory</a>
+      </nav>
+    </div>
+  </header>
+
   <!-- Hero Section -->
-  <section class="relative h-screen w-full overflow-hidden">
+  <section class="relative h-screen w-full overflow-hidden pt-20">
     <video
       poster="assets/hero-still.png"
       autoplay
