Update contact form email

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section id="contact" class="py-24 bg-zinc-900">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-semibold mb-6">Hire Me</h2>
-      <form action="https://formspree.io/f/xyzabc" method="POST" class="max-w-xl">
+      <form action="https://formsubmit.co/plumbmonkeyg@gmail.com" method="POST" class="max-w-xl">
         <div class="mb-4">
           <label class="block mb-1">Name</label>
           <input type="text" name="name" required class="w-full p-3 rounded bg-zinc-800 border border-zinc-700" />
