Update hero video poster to JPEG

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Hero Section -->
   <section class="relative h-screen w-full overflow-hidden pt-20">
     <video
-      poster="assets/hero-still.png"
+      poster="assets/hero-still.jpg"
       autoplay
       muted
       loop
