--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
   <!-- Hero Section -->
   <section class="relative h-screen w-full overflow-hidden pt-20">
     <video
-      poster="assets/hero-still.jpg"
-      autoplay
-      muted
-      loop
-      playsinline
-      class="absolute inset-0 w-full h-full object-cover"
-    >
+  poster="assets/hero-still.jpg"
+-  autoplay
+  muted
+  loop
+  playsinline
+  class="absolute inset-0 w-full h-full object-cover"
+>
+
       <source src="assets/hero.mp4" type="video/mp4" />
     </video>
     <div class="relative z-10 flex h-full items-center justify-center bg-zinc-900/60">
