--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <header class="fixed top-0 inset-x-0 bg-zinc-900/80 backdrop-blur-sm z-50">
     <div class="container mx-auto flex items-center justify-between p-4">
       <a href="/" class="text-xl font-bold">Plumbmonkey</a>
-      <button id="menu-toggle" class="sm:hidden p-2" aria-expanded="false" aria-controls="nav-container">
+      <button id="nav-toggle" class="md:hidden p-2" aria-expanded="false" aria-controls="main-nav">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
         <span class="sr-only">Toggle navigation</span>
       </button>
-      <div id="nav-container" class="hidden absolute top-full left-0 w-full bg-zinc-900/90 flex flex-col items-center space-y-6 sm:relative sm:flex sm:flex-row sm:space-y-0 sm:space-x-6 sm:bg-transparent sm:w-auto">
+      <div id="main-nav" class="hidden absolute top-full left-0 w-full bg-zinc-900/90 flex flex-col items-center space-y-6 md:relative md:flex md:flex-row md:space-y-0 md:space-x-6 md:bg-transparent md:w-auto">
         <nav>
           <a href="#about" class="block px-2 hover:underline">About</a>
           <a href="#services" class="block px-2 hover:underline">Services</a>
@@ -149,12 +149,11 @@
 </footer>
 
   <script>
-    const menuToggle = document.getElementById('menu-toggle');
-    const navContainer = document.getElementById('nav-container');
-    menuToggle.addEventListener('click', () => {
-      const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
-      menuToggle.setAttribute('aria-expanded', !expanded);
-      navContainer.classList.toggle('hidden');
+    const btn = document.getElementById('nav-toggle');
+    const nav = document.getElementById('main-nav');
+    btn.addEventListener('click', () => {
+      const isOpen = nav.classList.toggle('hidden');
+      btn.setAttribute('aria-expanded', String(!isOpen));
     });
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
       a.onclick=e=>{
