Enhance services section layout

--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
   <section id="services" class="py-24 bg-zinc-900">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-semibold mb-12">Services</h2>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="p-6 bg-zinc-800 rounded-2xl shadow">
-          <h3 class="text-xl font-medium mb-2">Audio Production</h3>
-          <p>Mixing, mastering, and sound design to elevate your tracks.</p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div class="p-6 bg-zinc-800 rounded-2xl shadow group hover:scale-105 transition-transform">
+          <img src="assets/icon-audio.svg" alt="" class="w-12 h-12 mx-auto mb-4" />
+          <h3 class="text-xl font-medium text-center mb-2">Audio Production</h3>
+          <p class="text-center">Mixing, mastering, and sound design to elevate your tracks.</p>
         </div>
-        <div class="p-6 bg-zinc-800 rounded-2xl shadow">
-          <h3 class="text-xl font-medium mb-2">Video Editing &amp; FX</h3>
-          <p>Story-driven cuts, AI-assisted visuals, cinematic polish.</p>
+        <div class="p-6 bg-zinc-800 rounded-2xl shadow group hover:scale-105 transition-transform">
+          <img src="assets/icon-video.svg" alt="" class="w-12 h-12 mx-auto mb-4" />
+          <h3 class="text-xl font-medium text-center mb-2">Video Editing &amp; FX</h3>
+          <p class="text-center">Story-driven cuts, AI-assisted visuals, cinematic polish.</p>
         </div>
-        <div class="p-6 bg-zinc-800 rounded-2xl shadow">
-          <h3 class="text-xl font-medium mb-2">Animation &amp; Motion</h3>
-          <p>2D/3D animation, lyric videos, live visuals synced to your music.</p>
+        <div class="p-6 bg-zinc-800 rounded-2xl shadow group hover:scale-105 transition-transform">
+          <img src="assets/icon-motion.svg" alt="" class="w-12 h-12 mx-auto mb-4" />
+          <h3 class="text-xl font-medium text-center mb-2">Animation &amp; Motion</h3>
+          <p class="text-center">2D/3D animation, lyric videos, live visuals synced to your music.</p>
         </div>
       </div>
     </div>
