Add discography section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
     </div>
   </section>
 
+  <section id="music" class="py-24 bg-zinc-950">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-semibold mb-6">Discography</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="p-6 bg-zinc-800 rounded-2xl shadow">
+          <h3 class="text-xl font-medium mb-2">Latest Release: <em>“[Track Title]”</em></h3>
+          <audio controls class="w-full">
+            <source src="assets/audio/latest-release.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+        <div class="p-6 bg-zinc-800 rounded-2xl shadow">
+          <h3 class="text-xl font-medium mb-2">Deep Cut: <em>“[Another Track]”</em></h3>
+          <audio controls class="w-full">
+            <source src="assets/audio/deep-track.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      </div>
+      <p class="mt-6 text-center">
+        <a href="https://open.spotify.com/artist/…" target="_blank" class="underline hover:text-cyan-400">
+          Listen on Spotify &rsaquo;
+        </a>
+      </p>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="py-24 bg-zinc-900">
     <div class="container mx-auto px-6">
