Add video showcase section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,52 @@
     </div>
   </section>
 
+  <section id="video" class="py-24">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-semibold mb-6">Video Showcase</h2>
+      <!-- Upcoming Stream -->
+      <div class="mb-12 p-6 bg-zinc-800 rounded-2xl shadow text-center">
+        <h3 class="text-xl font-medium mb-4">Upcoming Stream</h3>
+        <!-- Twitch embed or countdown placeholder -->
+        <div id="twitch-embed" class="w-full h-64 bg-zinc-700 flex items-center justify-center">
+          <!-- Replace with actual Twitch embed script later -->
+          <span class="text-zinc-400">Twitch Stream Embed Here</span>
+        </div>
+      </div>
+      <!-- Past Videos Grid -->
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div class="group">
+          <iframe 
+            class="w-full h-48 rounded-2xl object-cover group-hover:opacity-80 transition" 
+            src="https://www.youtube.com/embed/qwvi9Dtw8sg" 
+            title="Time Quake I – Music Video" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+          <p class="mt-2 text-lg text-center">Time Quake I – Music Video</p>
+        </div>
+        <div class="group">
+          <iframe 
+            class="w-full h-48 rounded-2xl object-cover group-hover:opacity-80 transition" 
+            src="https://www.youtube.com/embed/9qKR6wpHsEc" 
+            title="Hellcraft – Lyric Video" 
+            allowfullscreen>
+          </iframe>
+          <p class="mt-2 text-lg text-center">Hellcraft – Lyric Video</p>
+        </div>
+        <div class="group">
+          <iframe 
+            class="w-full h-48 rounded-2xl object-cover group-hover:opacity-80 transition" 
+            src="https://www.youtube.com/embed/Nv7clLmkKfo" 
+            title="Crown of Thorns – Promo Cut" 
+            allowfullscreen>
+          </iframe>
+          <p class="mt-2 text-lg text-center">Crown of Thorns – Promo Cut</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="py-24 bg-zinc-900">
     <div class="container mx-auto px-6">
