Add newsletter signup section

--- a/index.html
+++ b/index.html
@@ -219,6 +219,30 @@
     </div>
   </section>
 
+  <section id="subscribe" class="py-24 bg-zinc-800">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl font-semibold mb-4">Stay in the Loop</h2>
+      <p class="mb-6 max-w-xl mx-auto">
+        Sign up for behind-the-scenes updates, exclusive demos, and first listens delivered straight to your inbox.
+      </p>
+      <form action="YOUR_NEWSLETTER_ENDPOINT" method="POST" class="max-w-md mx-auto flex flex-col sm:flex-row gap-4">
+        <input
+          type="email"
+          name="email"
+          required
+          placeholder="Your email address"
+          class="flex-1 p-3 rounded bg-zinc-900 border border-zinc-700 text-zinc-100"
+        />
+        <button
+          type="submit"
+          class="px-6 py-3 rounded-2xl bg-cyan-500 text-zinc-900 font-semibold hover:bg-cyan-400 transition"
+        >
+          Subscribe
+        </button>
+      </form>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="py-24 bg-zinc-900">
     <div class="container mx-auto px-6">
