Fix hero video sequence, clean assets, and sync directory structure

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       playsinline
       class="w-full h-full object-cover hidden"
     >
-      <source src="assets/hero-loop-01.mp4" type="video/mp4" />
+      <source src="assets/hero-loop.mp4" type="video/mp4" />
     </video>
   </section>
 
