Add working audio toggle and polish hero/portfolio

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Plumbmonkey | Audio + Motion</title>
   <link rel="icon" href="assets/favicon.ico" />
-
-  <!-- Preload the hero intro video for faster paint -->
   <link rel="preload" as="video" href="assets/hero-intro.mp4" type="video/mp4">
-
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -24,7 +21,7 @@
 </head>
 <body class="bg-zinc-950 text-zinc-100 font-inter leading-relaxed">
 
-<!-- Fixed, minimal Navbar -->
+<!-- Navbar -->
 <header class="fixed top-0 inset-x-0 bg-zinc-900/80 backdrop-blur-sm z-50 h-10">
   <div class="flex items-center justify-start h-full px-4">
     <nav>
@@ -40,7 +37,7 @@
 
 <!-- Hero Section -->
 <section class="relative h-screen w-full overflow-hidden pt-10" id="hero">
-  <!-- Fullscreen hero video -->
+  <!-- HERO VIDEO -->
   <video
     id="hero-video"
     poster="assets/hero-intro.jpg"
@@ -51,7 +48,8 @@
   >
     <source id="hero-source" src="assets/hero-video.mp4" type="video/mp4" />
   </video>
-  <!-- OFFER (text overlay, bottom 20%) -->
+
+  <!-- OFFER (text overlay) -->
   <div class="absolute inset-x-0 bottom-0 pb-8 px-4 flex flex-col items-center text-center z-10"
        style="height: 20%; justify-content: flex-end;">
     <h1 class="text-3xl md:text-5xl font-bold mb-2 text-white drop-shadow-lg">
@@ -67,20 +65,23 @@
       See My Work
     </a>
   </div>
+
+  <!-- SPEAKER BUTTON (overlay, bottom left corner) -->
+  <button id="speaker-btn"
+    class="absolute left-6 bottom-8 z-20 bg-black/60 rounded-full p-3 focus:outline-none hover:bg-black/80 transition"
+    aria-label="Toggle audio">
+    <!-- Muted icon (show by default) -->
+    <svg id="icon-muted" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-teal-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path d="M9 9v6h4l5 5V4l-5 5H9z" fill="currentColor"/>
+      <line x1="4" y1="4" x2="20" y2="20" stroke="red" stroke-width="2"/>
+    </svg>
+    <!-- Unmuted icon (hidden by default) -->
+    <svg id="icon-unmuted" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-teal-400 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path d="M9 9v6h4l5 5V4l-5 5H9z" fill="currentColor"/>
+    </svg>
+  </button>
 </section>
 
-<!-- About Section -->
-<section id="about" class="bg-cover-section py-24 px-6">
-  <div class="flex flex-col md:flex-row items-center md:items-start md:gap-10">
-    <img src="assets/headshot01.jpg" alt="G – Studio Owner" class="w-40 rounded-full shadow-lg border-4 border-zinc-800 mb-6 md:mb-0">
-    <div>
-      <h2 class="text-3xl font-semibold mb-6">About</h2>
-      <p class="max-w-3xl text-lg">
-        Audio-visual alchemy for the algorithmic age—offering pure human craft, ethical AI, or a fusion of both. 
-      </p>
-    </div>
-  </div>
-</section>
 
 <!-- Services Section -->
 <section id="services" class="bg-cover-section py-24">
@@ -118,7 +119,7 @@
   </div>
 </section>
 
-<!-- Portfolio Section (edge-to-edge background) -->
+<!-- Portfolio Section -->
 <section id="portfolio" class="bg-cover-section py-24 w-full relative">
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-semibold mb-10">Video Editing Portfolio</h2>
@@ -188,9 +189,36 @@
   </div>
 </section>
 
+<!-- About Footer with Social Links -->
+<footer id="about" class="py-20 px-6 bg-zinc-900/80 mt-24">
+  <div class="flex flex-col items-center">
+    <img src="assets/headshot01.jpg" alt="G – Studio Owner" class="w-32 rounded-full shadow-lg border-4 border-zinc-800 mb-6">
+    <h2 class="text-2xl font-semibold mb-4">About Plumbmonkey</h2>
+    <p class="max-w-2xl text-center text-lg mb-6">
+      Audio-visual alchemy for the algorithmic age—offering pure human craft, ethical AI, or a fusion of both.<br>
+      <span class="opacity-80">All music, visuals, and code by G—creative lifer, open to all projects.</span>
+    </p>
+    <div class="flex space-x-6">
+      <a href="https://www.youtube.com/@PlumbmonkeyMusic" target="_blank" rel="noopener" aria-label="YouTube"
+         class="text-zinc-100 hover:text-teal-400 transition text-3xl">
+        <!-- YouTube SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="36" height="36" viewBox="0 0 24 24">
+          <path d="M23.498 6.186a2.959 2.959 0 0 0-2.085-2.098C19.382 3.547 12 3.547 12 3.547s-7.382 0-9.413.541A2.959 2.959 0 0 0 .502 6.186C0 8.228 0 12 0 12s0 3.772.502 5.814a2.959 2.959 0 0 0 2.085 2.098c2.031.541 9.413.541 9.413.541s7.382 0 9.413-.541a2.959 2.959 0 0 0 2.085-2.098C24 15.772 24 12 24 12s0-3.772-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+        </svg>
+      </a>
+      <a href="https://www.instagram.com/plumbmonkeymusic/" target="_blank" rel="noopener" aria-label="Instagram"
+         class="text-zinc-100 hover:text-teal-400 transition text-3xl">
+        <!-- Instagram SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="36" height="36" viewBox="0 0 24 24">
+          <path d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.354 3.608 1.329.974.975 1.267 2.243 1.329 3.608.058 1.265.069 1.645.069 4.83s-.012 3.565-.069 4.83c-.062 1.366-.354 2.633-1.329 3.608-.975.974-2.243 1.267-3.608 1.329-1.265.058-1.645.069-4.83.069s-3.565-.012-4.83-.069c-1.366-.062-2.633-.354-3.608-1.329-.974-.975-1.267-2.243-1.329-3.608C2.175 15.634 2.163 15.254 2.163 12s.012-3.565.069-4.83c.062-1.366.354-2.633 1.329-3.608.975-.974 2.243-1.267 3.608-1.329C8.435 2.175 8.815 2.163 12 2.163zm0-2.163C8.741 0 8.332.012 7.053.07 5.678.127 4.415.423 3.393 1.445c-1.023 1.022-1.319 2.285-1.375 3.66C1.012 8.334 1 8.742 1 12c0 3.259.012 3.668.07 4.947.056 1.375.352 2.638 1.375 3.66 1.022 1.023 2.285 1.319 3.66 1.375C8.334 22.988 8.742 23 12 23c3.259 0 3.668-.012 4.947-.07 1.375-.056 2.638-.352 3.66-1.375 1.023-1.022 1.319-2.285 1.375-3.66.058-1.279.07-1.688.07-4.947 0-3.259-.012-3.668-.07-4.947-.056-1.375-.352-2.638-1.375-3.66C19.334 1.423 18.072 1.127 16.697 1.07 15.418 1.012 15.009 1 12 1z"/>
+          <circle cx="12" cy="12" r="3.5"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+</footer>
 
-<!-- JS for hero video transitions -->
+<!-- JS for hero video transitions and mute toggle -->
 <script src="assets/hero.js"></script>
 </body>
 </html>
-
