text correction on moon whisper

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           allowfullscreen
         ></iframe>
         <h3 class="mt-2 text-xl font-semibold">Moon Whisper — Contest Entry</h3>
-        <p class="text-sm">Lyrics, music, animation, and edit all by Plumbmonkey. Handcrafted visuals and sound.</p>
+        <p class="text-sm">music, animation, and edit all by Plumbmonkey. Handcrafted visuals and sound.</p>
       </div>
       <div class="group">
         <iframe
