--- a/index.html
+++ b/index.html
@@ -21,19 +21,28 @@
 </head>
 <body class="bg-zinc-950 text-zinc-100 font-inter leading-relaxed">
 
-<!-- Navbar -->
 <header class="fixed top-0 inset-x-0 bg-zinc-900/80 backdrop-blur-sm z-50 h-10">
   <div class="flex items-center justify-start h-full px-4">
-    <nav>
-      <ul class="flex flex-col sm:flex-row sm:space-x-6 space-y-2 sm:space-y-0 items-center text-sm">
+    <nav class="w-full">
+      <ul class="flex flex-col sm:flex-row sm:space-x-6 space-y-2 sm:space-y-0 items-center text-sm w-full">
         <li><a href="#about" class="block px-2 hover:underline">About</a></li>
         <li><a href="#services" class="block px-2 hover:underline">Services</a></li>
         <li><a href="#portfolio" class="block px-2 hover:underline">Portfolio</a></li>
         <li><a href="#contact" class="block px-2 hover:underline">Contact</a></li>
+        <li>
+          <a href="https://ghostcircuit.thesimple.ink/"
+             target="_blank"
+             rel="noopener"
+             class="block px-2 text-teal-400 hover:text-teal-300 underline font-semibold"
+          >
+            Creator Tools Directory
+          </a>
+        </li>
       </ul>
     </nav>
   </div>
 </header>
+
 
 <!-- Hero Section -->
 <section class="relative h-screen w-full overflow-hidden pt-10" id="hero">
@@ -62,7 +71,7 @@
     </p>
     <a href="#portfolio"
       class="inline-block px-8 py-4 rounded-2xl bg-teal-400 text-zinc-900 font-semibold shadow hover:bg-teal-300 transition">
-      See My Work
+      Video Portfolio
     </a>
   </div>
 
